@@ -23,7 +23,7 @@ on the objects computed by \code{influence.merMod} and \code{influence.lme}.
 
 
 \usage{
-\method{influence}{merMod}(model, groups, data, maxfun=1000, ...)
+\method{influence}{merMod}(model, groups, data, maxfun=1000, ncores=1, ...)
 \method{influence}{lme}(model, groups, data, ...)
 
 \method{cooks.distance}{influence.merMod}(model, ...)
@@ -48,6 +48,9 @@ on the objects computed by \code{influence.merMod} and \code{influence.lme}.
   to perform after deleting each group; the defaults are large enough so that the iterations will typically continue to convergence.
   Setting to \code{maxfun=20} for an \code{lmer} model or \code{100} for a \code{glmer} model will typically produce a faster reasonable approximation. 
   An even smaller value can be used if interest is only in influence on the fixed effects.}
+  \item{ncores}{number of cores for parallel computation of diagnostics; if \code{1}
+  (the default), the computation isn't parallelized; if \code{Inf}, all of the cores
+  on the computer will be used.}
   \item{which}{if \code{"fixed.effects"} (the default), return influence on the fixed effects; if \code{"var.cov"}, return influence on the variance-covariance components.}
   \item{\dots}{ignored.}
 }
